KAN-141-RSS-ECOMM-4_03 fix: add z-index for dropdown-menu

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -45,6 +45,7 @@
   right: 75px;
   list-style: none;
   text-align: start;
+  z-index: 2;
   & li {
     background: #fbcaef;
     cursor: pointer;
